--- a/Article/bubbles.css
+++ b/Article/bubbles.css
@@ -100,6 +100,31 @@ background: none;
   filter: url(#glowLow);
 }
 
+.active {
+  opacity:1 ;
+  -webkit-transition: all 0.9s ease;
+     -moz-transition: all 0.9s ease;
+       -o-transition: all 0.9s ease;
+          transition: all 0.9s ease;
+}
+
+.unselected {
+  opacity: .1;
+    -webkit-transition: all 0.8s ease;
+     -moz-transition: all 0.8s ease;
+       -o-transition: all 0.8s ease;
+          transition: all 0.8s ease;
+}
+
+.selected{
+  opacity: 1;
+  filter: url(#glowLow)
+    -webkit-transition: all 0.05s ease;
+     -moz-transition: all 0.05s ease;
+       -o-transition: all 0.05s ease;
+          transition: all 0.05s ease;
+}
+
 .behind{
   z-index: -100;
   opacity: 0;
@@ -122,6 +147,10 @@ background: none;
 
 .diceGroup {
   cursor: pointer;
+}
+
+.diceGroup:hover .unselected{
+   opacity: .3;
 }
 
 .searchGroup:hover .behind{
