Updating CSS and HTML

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -14,6 +14,7 @@ html, body, div, h1, h2, h3, h4, h5, h6, a, p, img, dl, dt, dd, ul, li { padding
 /* body structure */
 body {
 	background-image: url(../img/Mockup.jpg);
+	background-size: 100% 100%;
 	font-family: "Whitney SSm A", "Whitney SSm B";
 	font-size: 14px;
 	font-weight: 400; /* 900, 500, 600, 700, 400 */
@@ -222,13 +223,12 @@ a:hover {
 /* BUBBLE CHART */
 
 #vis {
-  width: 700px;
+  width: 100%;
   height: 700px;
   clear: both;
   margin-bottom: 10px;
   position: relative;
   text-align: center;
-  margin-left: 5%;
 }
 
 .bubble-full-frame {
@@ -434,9 +434,20 @@ background: none;
 
 
 .line-chart-wrap {
-	max-width: 960px;
+	max-width: 1059px;
 	width: 95%;
+	height: 0;
+	padding-bottom: 52.9%; /*responsive*/
 	margin: 0 auto;
+}
+
+.line-chart {
+	width: 100%;
+	height: 0;
+	padding-bottom: 52.9%; /*responsive*/
+	background: url(../img/Graph_Mockup.jpg);
+	background-size: 100% 100%;
+	display: block;
 }
 
 
@@ -446,9 +457,21 @@ background: none;
 
 
 .presidents-chart-wrap {
-	max-width: 800px;
+	max-width: 1059px;
 	width: 95%;
+	height: 0;
+	padding-bottom: 52.9%; /*responsive*/
 	margin: 0 auto;
+
+}
+
+.presidents-chart {
+	width: 100%;
+	background: url(../img/President_Mockup.jpg);
+	background-size: 100% 100%;
+	height: 0;
+	padding-bottom: 52.9%; /*responsive*/
+	display: block;
 }
 
 
